# Gerber-Viewer

./: CMakeLists.txt  Readme.md  cvt.cpp  cvt.h  main.cpp  object.cpp  object.h  reader.cpp  reader.h  test.cpp  triangulate.cpp  triangulate.h
gb_files/: DIY_detector-B_Cu.gbl  Gerber_drill.GKO  neotron-32-F_Cu.gbr  neotron-32-F_Mask.gbr  neotron-32-F_SilkS.gbr  test.gbl  test2.gbl  test3.gbr  test4.gbl
includes/: cvt.h  glad.h  object.h  triangulate.h  vec2.h
src/: cvt.cpp  glad.c  main.cpp  object.cpp  reader.cpp  triangulate.cpp  vec2.cpp
